--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
     </nav>
       <main>
         <div>
-            <h2></h2>
+            <h2>Seu Cabelo mais bonito? <br>
+                Aqui você tem, aqui você pode!
+            </h2>
         </div>
       </main>
 </body>
