--- a/index.html
+++ b/index.html
@@ -9,21 +9,23 @@
 <body>
   <nav>
     <div>
-      <h1>Beauté.</h1>
+      <h2>Beauté.</h2>
     </div>
       <ul id="navegador">
         <li><a href="#">Home</a></li>
-        <li><a href="#">Produtos</a></li>
-        <li><a href="#">Carrinho</a></li>
-        <li><a href="#">Contato</a></li>
+        <li><a href="#">Corte de cabelo</a></li>
+        <li><a href="#">hidratação</a></li>
+        <li><a href="#">Manicure</a></li>
+        <li id="contato"><a href="">Contato</a></li>
       </ul>
     </nav>
       <main>
-        <div>
-            <h2>Seu Cabelo mais bonito? <br>
-                Aqui você tem, aqui você pode!
-            </h2>
-        </div>
+        <section class="sec-1 show-animate">
+          <h1 class="animate">Olá, seja bem-vindo ao <i>beauté</i></h1>
+          <p class="animate">Aqui você fica mais bonita e confiante</p>
+        </section>
+         
       </main>
+  <script src="script.js"></script>
 </body>
 </html>
