projeto em andamento

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           </button>
         </div>
          </div>
-
+       <!-- Card em loop -->
 
       <script src="script.js"></script>
          
