--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="style.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">  
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <title>Salão de Beleza</title>
 </head>
@@ -61,10 +62,47 @@
         </div>
          </div>
        <!-- Card em loop -->
-
-      <script src="script.js"></script>
-         
+       <section class="Card">
+         <div class="image-container">
+          <article class="image-wrapper">
+            <div>
+              <img src="../img/cometários/pexels-ahmed-ツ-17974423.jpg" alt="">
+              <p class="TextoCard">Helena</p>
+            </div>
+            <div>
+              <img src="../img/cometários/pexels-anna-shvets-3852204.jpg" alt="">
+              <p class="TextoCard">Carla</p>
+            </div>
+            <div>
+              <img src="../img/cometários/pexels-august-de-richelieu-7431563.jpg" alt="">
+              <p class="TextoCard">Noah</p>
+            </div>
+            <div>
+              <img src="../img/cometários/pexels-hatice-baran-13107422.jpg" alt="">
+              <p class="TextoCard">Anne Paula</p>
+            </div>
+            <div>
+              <img src="../img/cometários/pexels-lucretius-mooka-13911805.jpg" alt="">
+              <p class="TextoCard">Maria vitoria</p>
+            </div>
+            <div>
+              <img src="../img/cometários/pexels-kevin-kabore-4862429.jpg" alt="">
+              <p class="TextoCard">Aurora</p>
+          </div>
+                  <div>
+                  <img src="../img/cometários/pexels-anna-shvets-4971257.jpg" alt="">
+              <p class="TextoCard">Anna</p>
+          </div>
+            <div>
+              <img src="../img/cometários/pexels-angela-roma-7479819.jpg" alt="">
+              <p class="TextoCard">Angela</p>
+            </div>
+          </article>
+             </div>
+       </section>
+     
       </main>
-  
+      <script src="script.js"></script>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>  
 </body>
 </html>
