--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="style.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">  
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <script src="https://kit.fontawesome.com/65ba5f633f.js" crossorigin="anonymous"></script>
   <title>Salão de Beleza</title>
 </head>
 <body>
@@ -18,39 +19,40 @@
         <li><a href="#">Corte de cabelo</a></li>
         <li><a href="#">hidratação</a></li>
         <li><a href="#">Manicure</a></li>
+        <li><a href="#">Promoção</a></li>
         <li id="contato"><a href="">Contato</a></li>
       </ul>
     </nav>
       <main>
         <section class="sec-1 show-animate">
-          <h1 class="animate">Olá, seja bem-vindo ao <i>beauté</i></h1>
-          <p class="animate">Aqui você fica mais bonita e confiante</p>
+          <h1 class="animate">Beauté.</h1>
+          <p class="animate">Bem-vindo ao Salão feito para voce</p>
         </section>
         <!-- Carrosel vertical -->
          <div class="slider-container">
           <div class="left-slide">
-            <div style="background-color: #7FBF89;">
+            <div style="background-color: #37384C;">
               <h3>Nosso Serviços</h3>
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores molestias ipsam eveniet. Temporibus, illo quisquam sequi cupiditate tenetur dicta maxime itaque aperiam soluta aliquid, ab adipisci, accusantium ea reiciendis. Esse.</p>
+              <p>"Transformando sonhos em realidade, nossos serviços não apenas atendem, mas elevam a experiência. Sua satisfação é nossa missão, e a excelência é nosso compromisso.".</p>
             </div>
-          <div style="background-color: #3F3F3F;">
+          <div style="background-color: #B8BFC6;">
             <h3>Corte de Cabelo</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores molestias ipsam eveniet. Temporibus, illo quisquam sequi cupiditate tenetur dicta maxime itaque aperiam soluta aliquid, ab adipisci, accusantium ea reiciendis. Esse.</p>
+            <p>"Renove-se a cada corte, onde cada mecha conta uma história de beleza e autoexpressão. Descubra a arte de transformar-se, uma madeixa de cada vez."</p>
           </div>
-          <div style="background-color: #575F51;">
-            <h3>Hidratação</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores molestias ipsam eveniet. Temporibus, illo quisquam sequi cupiditate tenetur dicta maxime itaque aperiam soluta aliquid, ab adipisci, accusantium ea reiciendis. Esse.</p>
+          <div style="background-color: #8084A1;">
+            <h3>Escova</h3>
+            <p>"Renove seu brilho natural: uma hidratação que faz seus cabelos sussurrarem suavidade."</p>
           </div>
-          <div style="background-color: #A6B695;">
+          <div style="background-color: #5C6277;">
             <h3>Manicure</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores molestias ipsam eveniet. Temporibus, illo quisquam sequi cupiditate tenetur dicta maxime itaque aperiam soluta aliquid, ab adipisci, accusantium ea reiciendis. Esse.</p>
+            <p>"Unhas perfeitas são a expressão da sua essência. Deixe-me cuidar de cada detalhe, enquanto transformamos suas mãos em obras de arte, revelando a beleza que é só sua."</p>
           </div>
         </div>
           <div class="right-slide">
-            <div style="background-image: url('./img/cometários/NossoServico.jpg');"></div>
-          <div style="background-image: url('./img/cometários/corteDeCabelo.jpg');"></div> 
-          <div style="background-image: url('./img/cometários/hidratacao.jpg');"></div>
-          <div style="background-image: url('./img/cometários/manicure.jpg');"></div>          
+            <div style="background-image: url('./img/cometários/manicure.jpg');"></div>
+          <div style="background-image: url('./img/cometários/hidratacao.jpg');"></div> 
+          <div style="background-image: url('./img/cometários/corteDeCabelo.jpg');"></div>
+          <div style="background-image: url('./img/cometários/NossoServico.jpg');"></div>          
           </div>
         <div class="action-buttons">
           <button class="down-button">
@@ -63,6 +65,7 @@
          </div>
        <!-- Card em loop -->
        <section class="Card">
+        <h4 style="font-size: 40px; font-family: Sang bleu-light;">Nossos Clientes</h4>
          <div class="image-container">
           <article class="image-wrapper">
             <div>
@@ -100,7 +103,20 @@
           </article>
              </div>
        </section>
-     
+        <!-- footer -->
+         <footer>
+          <div class="footer-content">
+            <h5>Obrigada pela Visita!</h5>
+            <p>Promoção para aniversariantes</p>
+            <ul class="socials">
+              <li><a href="#"><i class="fa-brands fa-instagram"></i></a></li>
+              <li><a href="#"><i class="fa-brands fa-facebook"></i></a></li>
+              <li><a href="#"><i class="fa-solid fa-envelope"></i></i></a></li>
+              <li><i class="fa-brands fa-whatsapp"></i></a></li>
+            </ul>
+          </div>
+         </footer>
+
       </main>
       <script src="script.js"></script>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>  
