finalizando projeto final

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <title>Salão de Beleza</title>
 </head>
 <body>
-  <nav>
+  <nav class="dropdownmenu">
     <div>
       <h2>Beauté.</h2>
     </div>
@@ -20,8 +20,8 @@
         <li><a href="#">hidratação</a></li>
         <li><a href="#">Manicure</a></li>
         <li><a href="#">Promoção</a></li>
-        <li id="contato"><a href="">Contato</a></li>
-      </ul>
+        <li><a href="">Contato</a>
+
     </nav>
       <main>
         <section class="sec-1 show-animate">
