projeto em andamento

--- a/Login/login.html
+++ b/Login/login.html
@@ -42,7 +42,7 @@
         <input type="text" placeholder="Login" id="login">
         <input type="password" placeholder="Senha" id="senha">
         <input type="submit" onclick="logar(); return false">
-        <label for="#"><a href="">Ainda nao se cadastrou?</a></label>
+        <label for="#"><a href="http://127.0.0.1:5502/Login/cadastro.html">Ainda nao se cadastrou?</a></label>
 
         <script src="script.js"></script>
     </form>
