--- a/index.html
+++ b/index.html
@@ -10,19 +10,45 @@
   <title>Salão de Beleza</title>
 </head>
 <body>
-  <nav class="dropdownmenu">
+
+  <header>
+    <nav class="navbar">
+       <a class="logo" href="#">Beauté.</a>
+       <ul class="nav-menu">
+        <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
+        <li class="nav-item"><a class="nav-link" href="#">Corte de Cabelo</a></li>
+        <li class="nav-item"><a class="nav-link" href="#">hidratação</a></li>
+        <li class="nav-item"><a class="nav-link" href="#">Manicure</a></li>
+        <li class="nav-item"><a class="nav-link" href="#">Promoções</a></li>
+        <li class="nav-item"><a class="nav-link" href="">Contato</a></li>
+       </ul>
+
+         <div class="hamburguer">
+          <span class="bar"></span>
+          <span class="bar"></span>
+          <span class="bar"></span>
+         </div>
+    </nav>
+ </header>
+  <!-- <header>
+  <nav class="navbar">
     <div>
       <h2>Beauté.</h2>
     </div>
-      <ul id="navegador">
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Corte de cabelo</a></li>
-        <li><a href="#">hidratação</a></li>
-        <li><a href="#">Manicure</a></li>
-        <li><a href="#">Promoção</a></li>
-        <li><a href="">Contato</a>
-
+      <ul class="nav-menu">
+        <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
+        <li class="nav-item"><a  class="nav-link" href="#">Corte de cabelo</a></li>
+        <li class="nav-item"><a class="nav-link" href="#">hidratação</a></li>
+        <li class="nav-item"><a class="nav-link" href="#">Manicure</a></li>
+        <li class="nav-item"><a class="nav-link" href="http://127.0.0.1:5502/Promo%C3%A7ao/index.html">Promoção</a></li>
+        <li class="nav-item"><a class="nav-link" href="">Contato</a></li>
+        <div class="hamburguer">
+          <span class="bar"></span>
+          <span class="bar"></span>
+          <span class="bar"></span>
+         </div>
     </nav>
+  </header> -->
       <main>
         <section class="sec-1 show-animate">
           <h1 class="animate">Beauté.</h1>
@@ -71,6 +97,8 @@
             <div>
               <img src="../img/cometários/pexels-ahmed-ツ-17974423.jpg" alt="">
               <p class="TextoCard">Helena</p>
+              <p><i class="fa-solid fa-star"></i></p>
+
             </div>
             <div>
               <img src="../img/cometários/pexels-anna-shvets-3852204.jpg" alt="">
