--- a/Promoçao/index.html
+++ b/Promoçao/index.html
@@ -12,7 +12,7 @@
           <!-- <h2>Beauté.</h2> -->
         </div>
           <ul id="navegador">
-            <li><a href="#">Home</a></li>
+            <li><a href="http://127.0.0.1:5502/index.html">Home</a></li>
             <li><a href="#">Corte de cabelo</a></li>
             <li><a href="#">hidratação</a></li>
             <li><a href="#">Manicure</a></li>
@@ -22,7 +22,7 @@
         </nav>
 
     <section class="products">
-      <h2>Promoção</h2>
+      <h2>Promoções</h2>
       <div class="all-products">
         <div class="product">
           <img src="../img/agendar/corte.jpg">
