--- a/Promoçao/index.html
+++ b/Promoçao/index.html
@@ -7,19 +7,48 @@
   <title>Promoção</title>
 </head>
 <body>
-    <nav>
-        <div>
-          <!-- <h2>Beauté.</h2> -->
-        </div>
-          <ul id="navegador">
-            <li><a href="http://127.0.0.1:5502/index.html">Home</a></li>
-            <li><a href="#">Corte de cabelo</a></li>
-            <li><a href="#">hidratação</a></li>
-            <li><a href="#">Manicure</a></li>
-            <li><a href="#">Promoção</a></li>
-            <li id="contato"><a href="">Contato</a></li>
-          </ul>
-        </nav>
+  <header>
+    <nav class="navbar">
+       <a class="logo" href="#">Beauté.</a>
+       <ul class="nav-menu">
+        <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
+        <li class="nav-item">
+        <a class="nav-link" href="#">Corte de Cabelo</a>
+        <ul class="dropdown">
+         <li><a href="#">Corte Masculino</a></li>
+         <li><a href="#">Corte Feminino</a></li>
+         <li><a href="#">Corte com finalização</a></li>
+         <li><a href="#">Corte com escova</a></li>
+        </ul>
+        </li>
+        <li class="nav-item"><a class="nav-link" href="#">Escova</a>
+        <ul class="dropdown">
+          <li><a href="#">Escova Completa</a></li>
+          <li><a href="#">Escova com hidratação</a></li>
+          <li><a href="#">Escova com progessiva</a></li>
+          <li><a href="#">Escova com penteado</a></li>
+         </ul>
+        </li>
+        <li class="nav-item"><a class="nav-link" href="#">Manicure</a>
+          <ul class="dropdown">
+            <li><a href="#">Unha de gel</a></li>
+            <li><a href="#">mão e pé simples</a></li>
+            <li><a href="#">Manutenção de unha de gel</a></li>
+            <li><a href="#">Remoção de unha de gel</a></li>
+           </ul>
+        </li>
+        <li class="nav-item"><a class="nav-link" href="http://127.0.0.1:5502/Promo%C3%A7ao/index.html">Promoções</a>
+        </li>
+        <li class="nav-item"><a class="nav-link" href="http://127.0.0.1:5502/Login/login.html">Cadastro</a>
+        </li>
+       </ul>    
+         <div class="hamburguer">
+          <span class="bar"></span>
+          <span class="bar"></span>
+          <span class="bar"></span>
+         </div>
+    </nav>
+ </header>
 
     <section class="products">
       <h2>Promoções</h2>
