--- a/index.html
+++ b/index.html
@@ -16,13 +16,36 @@
        <a class="logo" href="#">Beauté.</a>
        <ul class="nav-menu">
         <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
-        <li class="nav-item"><a class="nav-link" href="#">Corte de Cabelo</a></li>
-        <li class="nav-item"><a class="nav-link" href="#">hidratação</a></li>
-        <li class="nav-item"><a class="nav-link" href="#">Manicure</a></li>
-        <li class="nav-item"><a class="nav-link" href="#">Promoções</a></li>
-        <li class="nav-item"><a class="nav-link" href="">Contato</a></li>
-       </ul>
-
+        <li class="nav-item">
+        <a class="nav-link" href="#">Corte de Cabelo</a>
+        <ul class="dropdown">
+         <li><a href="#">Corte Masculino</a></li>
+         <li><a href="#">Corte Feminino</a></li>
+         <li><a href="#">Corte com finalização</a></li>
+         <li><a href="#">Corte com escova</a></li>
+        </ul>
+        </li>
+        <li class="nav-item"><a class="nav-link" href="#">Escova</a>
+        <ul class="dropdown">
+          <li><a href="#">Escova Completa</a></li>
+          <li><a href="#">Escova com hidratação</a></li>
+          <li><a href="#">Escova com progessiva</a></li>
+          <li><a href="#">Escova com penteado</a></li>
+         </ul>
+        </li>
+        <li class="nav-item"><a class="nav-link" href="#">Manicure</a>
+          <ul class="dropdown">
+            <li><a href="#">Unha de gel</a></li>
+            <li><a href="#">mão e pé simples</a></li>
+            <li><a href="#">Manutenção de unha de gel</a></li>
+            <li><a href="#">Remoção de unha de gel</a></li>
+           </ul>
+        </li>
+        <li class="nav-item"><a class="nav-link" href="http://127.0.0.1:5502/Promo%C3%A7ao/index.html">Promoções</a>
+        </li>
+        <li class="nav-item"><a class="nav-link" href="http://127.0.0.1:5502/Login/login.html">Cadastro</a>
+        </li>
+       </ul>    
          <div class="hamburguer">
           <span class="bar"></span>
           <span class="bar"></span>
@@ -30,46 +53,28 @@
          </div>
     </nav>
  </header>
-  <!-- <header>
-  <nav class="navbar">
-    <div>
-      <h2>Beauté.</h2>
-    </div>
-      <ul class="nav-menu">
-        <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
-        <li class="nav-item"><a  class="nav-link" href="#">Corte de cabelo</a></li>
-        <li class="nav-item"><a class="nav-link" href="#">hidratação</a></li>
-        <li class="nav-item"><a class="nav-link" href="#">Manicure</a></li>
-        <li class="nav-item"><a class="nav-link" href="http://127.0.0.1:5502/Promo%C3%A7ao/index.html">Promoção</a></li>
-        <li class="nav-item"><a class="nav-link" href="">Contato</a></li>
-        <div class="hamburguer">
-          <span class="bar"></span>
-          <span class="bar"></span>
-          <span class="bar"></span>
-         </div>
-    </nav>
-  </header> -->
       <main>
         <section class="sec-1 show-animate">
+          <img src="./img/cometários/pexels-anna-shvets-3852204.jpg" alt="">
           <h1 class="animate">Beauté.</h1>
-          <p class="animate">Bem-vindo ao Salão feito para voce</p>
+          <p class="animate">Bem-vindo ao Salão feito para você</p>
         </section>
         <!-- Carrosel vertical -->
          <div class="slider-container">
           <div class="left-slide">
-            <div style="background-color: #37384C;">
+            <div style="background-color: #CBAD8D;">
               <h3>Nosso Serviços</h3>
               <p>"Transformando sonhos em realidade, nossos serviços não apenas atendem, mas elevam a experiência. Sua satisfação é nossa missão, e a excelência é nosso compromisso.".</p>
             </div>
-          <div style="background-color: #B8BFC6;">
+          <div style="background-color: #746469;">
             <h3>Corte de Cabelo</h3>
             <p>"Renove-se a cada corte, onde cada mecha conta uma história de beleza e autoexpressão. Descubra a arte de transformar-se, uma madeixa de cada vez."</p>
           </div>
-          <div style="background-color: #8084A1;">
+          <div style="background-color: #CBAD8D;">
             <h3>Escova</h3>
             <p>"Renove seu brilho natural: uma hidratação que faz seus cabelos sussurrarem suavidade."</p>
           </div>
-          <div style="background-color: #5C6277;">
+          <div style="background-color: #746469;">
             <h3>Manicure</h3>
             <p>"Unhas perfeitas são a expressão da sua essência. Deixe-me cuidar de cada detalhe, enquanto transformamos suas mãos em obras de arte, revelando a beleza que é só sua."</p>
           </div>
@@ -97,7 +102,7 @@
             <div>
               <img src="../img/cometários/pexels-ahmed-ツ-17974423.jpg" alt="">
               <p class="TextoCard">Helena</p>
-              <p><i class="fa-solid fa-star"></i></p>
+
 
             </div>
             <div>
