--- a/Login/login.html
+++ b/Login/login.html
@@ -12,9 +12,9 @@
     <!-- Menu -->
     <header>
         <nav class="navbar">
-           <a class="logo" href="#">Beauté.</a>
+           <a class="logo" href="http://127.0.0.1:5502/index.html">Beauté.</a>
            <ul class="nav-menu">
-            <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
+            <li class="nav-item"><a class="nav-link" href="http://127.0.0.1:5502/index.html">Home</a></li>
             <li class="nav-item">
             <a class="nav-link" href="#">Corte de Cabelo</a>
             <ul class="dropdown">
@@ -72,7 +72,7 @@
                 <input class="button" type="submit" onclick="logar(); return false">
             </div>
             
-            <label for="#"><a href="http://127.0.0.1:5502/Login/agendamento.html">Ainda nao se cadastrou?</a></label>
+            <label for="#"><a href="http://127.0.0.1:5502/Login/agendamento.html" style="color: black;">Ainda nao se cadastrou?</a></label>
   
 
    </div>
