--- a/Promoçao/index.html
+++ b/Promoçao/index.html
@@ -9,9 +9,9 @@
 <body>
   <header>
     <nav class="navbar">
-       <a class="logo" href="#">Beauté.</a>
+       <a class="logo" href="http://127.0.0.1:5502/index.html">Beauté.</a>
        <ul class="nav-menu">
-        <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
+        <li class="nav-item"><a class="nav-link" href="http://127.0.0.1:5502/index.html">Home</a></li>
         <li class="nav-item">
         <a class="nav-link" href="#">Corte de Cabelo</a>
         <ul class="dropdown">
