--- a/Promoçao/index.html
+++ b/Promoçao/index.html
@@ -11,11 +11,16 @@
     <nav class="navbar">
        <a class="logo" href="http://127.0.0.1:5502/index.html">Beauté.</a>
        <ul class="nav-menu">
-        <li class="nav-item"><a class="nav-link" href="http://127.0.0.1:5502/index.html">Home</a></li>
+        <li class="nav-item"><a class="nav-link" href="http://127.0.0.1:5502/index.html">Home</a>
+          <ul class="dropdown">
+            <li><a href="http://127.0.0.1:5502/sugestoes/sugestao.html">Comentários</a></li>
+            <li><a href="http://127.0.0.1:5502/localizacao/index.html">Localização</a></li>
+           </ul>
+        </li>
         <li class="nav-item">
         <a class="nav-link" href="#">Corte de Cabelo</a>
         <ul class="dropdown">
-         <li><a href="#">Corte Masculino</a></li>
+         <li><a href="http://127.0.0.1:5502/Corte%20de%20Cabelo/index.html">Corte Masculino</a></li>
          <li><a href="#">Corte Feminino</a></li>
          <li><a href="#">Corte com finalização</a></li>
          <li><a href="#">Corte com escova</a></li>
@@ -39,7 +44,8 @@
         </li>
         <li class="nav-item"><a class="nav-link" href="http://127.0.0.1:5502/Promo%C3%A7ao/index.html">Promoções</a>
         </li>
-        <li class="nav-item"><a class="nav-link" href="http://127.0.0.1:5502/Login/login.html">Cadastro</a>
+        <li class="nav-item"><a class="nav-link" href="http://127.0.0.1:5502/Login/agendamento.html">Agendar</a>
+          
         </li>
        </ul>    
          <div class="hamburguer">
@@ -49,6 +55,7 @@
          </div>
     </nav>
  </header>
+   <!--Main  -->
 
     <section class="products">
       <h2>Promoções</h2>
