--- a/Promoçao/index.html
+++ b/Promoçao/index.html
@@ -65,8 +65,8 @@
           <div class="product-info">
             <h4 class="product-title">Corte de Cabelo
             </h4>
-            <p class="product-price">R$160,00</p>
-            <a class="product-btn" href="#">Agendar</a>
+            <p class="product-price">R$140,00</p>
+            <a class="product-btn" href="http://127.0.0.1:5502/Login/agendamento.html">Agendar</a>
   
           </div>
         </div>
@@ -74,8 +74,8 @@
           <img src="../img/agendar/escova.jpg">
           <div class="product-info">
             <h4 class="product-title">Escova</h4>
-            <p class="product-price">R$170,00</p>
-            <a class="product-btn" href="#">Agendar</a>
+            <p class="product-price">R$100,00</p>
+            <a class="product-btn" href="http://127.0.0.1:5502/Login/agendamento.html">Agendar</a>
   
           </div>
         </div>
@@ -85,7 +85,7 @@
             <h4 class="product-title">Manicure
             </h4>
             <p class="product-price">R$40,00</p>
-            <a class="product-btn" href="#">Agendar</a>
+            <a class="product-btn" href="http://127.0.0.1:5502/Login/agendamento.html">Agendar</a>
   
           </div>
         </div>
@@ -95,7 +95,7 @@
             <h4 class="product-title">Pintura
               </h4>
             <p class="product-price">R$70,00</p>
-            <a class="product-btn" href="#">Agendar</a>
+            <a class="product-btn" href="http://127.0.0.1:5502/Login/agendamento.html">Agendar</a>
   
           </div>
         </div>
