--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
  </header>
       <main>
         <section class="sec-1 show-animate">
-          <img src="/img/cometários/pexels-anna-shvets-3852204.jpg" alt="">
+          <img src="img/cometários/pexels-anna-shvets-3852204.jpg" alt="">
           <h1 class="animate">Beauté.</h1>
           <br>
           <p class="animate">Bem-vindo ao Salão feito para você</p>
@@ -108,7 +108,7 @@
          <div class="image-container">
           <article class="image-wrapper">
             <div>
-              <img src="/img/cometários/pexels-anna-shvets-3852204.jpg" alt="">
+              <img src="img/cometários/pexels-anna-shvets-3852204.jpg" alt="">
               <p class="TextoCard">Helena</p>
               <small>"Ótimo atendimento!"</small>
     
@@ -119,33 +119,33 @@
               <small>"Os profissionais são de muita qualidade."</small>
             </div>
             <div>
-              <img src="/img/cometários/pexels-angela-roma-7479819.jpg" alt="">
+              <img src="img/cometários/pexels-angela-roma-7479819.jpg" alt="">
               <p class="TextoCard">Carla</p>
               <small>"Não troco o Beauté por nem outro salão."</small>
             </div>
             <div>
-              <img src="/img/cometários/pexels-anna-shvets-4971257.jpg" alt="">
+              <img src="img/cometários/pexels-anna-shvets-4971257.jpg" alt="">
               <p class="TextoCard">Anne Paula</p>
               <small>"Minhas unhas de gel ficaram ótimas"</small>
             </div>
             <div>
-              <img src="/img/cometários/pexels-august-de-richelieu-7431563.jpg" alt="">
+              <img src="img/cometários/pexels-august-de-richelieu-7431563.jpg" alt="">
               <p class="TextoCard">Henri</p>
               <small>"Qualidade e eficiência"</small>
             </div>
             <div>
-              <img src="/img/cometários/pexels-hatice-baran-13107422.jpg" alt="">
+              <img src="img/cometários/pexels-hatice-baran-13107422.jpg" alt="">
               <p class="TextoCard">Aurora</p>
               <small>"Corto meu cabelo somente no Beauté"</small>
     
           </div>
                   <div>
-                  <img src="/img/cometários/pexels-kevin-kabore-4862429.jpg" alt="">
+                  <img src="img/cometários/pexels-kevin-kabore-4862429.jpg" alt="">
               <p class="TextoCard">Anna</p>
               <small>"Profissionais capacitados"</small>
           </div>
             <div>
-              <img src="/img/cometários/pexels-lucretius-mooka-13911805.jpg" alt="">
+              <img src="img/cometários/pexels-lucretius-mooka-13911805.jpg" alt="">
               <p class="TextoCard">Angela</p>
               <small>"Meu cabelo sempre bonito"</small>
             </div>
