--- a/index.html
+++ b/index.html
@@ -114,38 +114,38 @@
     
             </div>
             <div>
-              <img src="../" alt="">
+              <img src="./img/cometários/pexels-hatice-baran-13107422.jpg" alt="">
               <p class="TextoCard">Carlos</p>
               <small>"Os profissionais são de muita qualidade."</small>
             </div>
             <div>
-              <img src="img/cometários/pexels-angela-roma-7479819.jpg" alt="">
+              <img src="./img/cometários/pexels-angela-roma-7479819.jpg" alt="">
               <p class="TextoCard">Carla</p>
               <small>"Não troco o Beauté por nem outro salão."</small>
             </div>
             <div>
-              <img src="img/cometários/pexels-anna-shvets-4971257.jpg" alt="">
+              <img src="./img/cometários/pexels-anna-shvets-4971257.jpg" alt="">
               <p class="TextoCard">Anne Paula</p>
               <small>"Minhas unhas de gel ficaram ótimas"</small>
             </div>
             <div>
-              <img src="img/cometários/pexels-august-de-richelieu-7431563.jpg" alt="">
+              <img src="./img/cometários/pexels-august-de-richelieu-7431563.jpg" alt="">
               <p class="TextoCard">Henri</p>
               <small>"Qualidade e eficiência"</small>
             </div>
             <div>
-              <img src="img/cometários/pexels-hatice-baran-13107422.jpg" alt="">
+              <img src="./img/cometários/pexels-hatice-baran-13107422.jpg" alt="">
               <p class="TextoCard">Aurora</p>
               <small>"Corto meu cabelo somente no Beauté"</small>
     
           </div>
                   <div>
-                  <img src="img/cometários/pexels-kevin-kabore-4862429.jpg" alt="">
+                  <img src="./img/cometários/pexels-kevin-kabore-4862429.jpg" alt="">
               <p class="TextoCard">Anna</p>
               <small>"Profissionais capacitados"</small>
           </div>
             <div>
-              <img src="img/cometários/pexels-lucretius-mooka-13911805.jpg" alt="">
+              <img src="./img/cometários/pexels-lucretius-mooka-13911805.jpg" alt="">
               <p class="TextoCard">Angela</p>
               <small>"Meu cabelo sempre bonito"</small>
             </div>
