--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
          <div class="image-container">
           <article class="image-wrapper">
             <div>
-              <img src="img/cometários/pexels-anna-shvets-3852204.jpg" alt="">
+              <img src="./img/cometários/pexels-anna-shvets-3852204.jpg" alt="">
               <p class="TextoCard">Helena</p>
               <small>"Ótimo atendimento!"</small>
     
